<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.covidreturntowork.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_checkIn"
        android:name="com.example.covidreturntowork.CheckIn"
        android:label="@string/title_checkIn"
        tools:layout="@layout/fragment_check_in" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.covidreturntowork.History"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_whatToDo"
        android:name="com.example.covidreturntowork.WhatToDo"
        android:label="@string/title_what_to_do"
        tools:layout="@layout/fragment_what_to_do" />
    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.example.covidreturntowork.Logout"
        android:label="@string/title_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>